--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "lerna bootstrap",
     "remove-modules": "lerna exec -- rm -rf ./node_modules",
     "build": "docker-compose build",
-    "deploy": "docker stack deploy --with-registry-auth --compose-file=docker-compose.yaml api"
+    "deploy": "docker stack deploy --with-registry-auth --compose-file=docker-compose.yaml api",
+    "start-dev": "scripts/start-dev"
   }
 }
