--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,6 +27,7 @@
     "react-image-cropper": "^1.1.1",
     "react-infinite-scroller": "^1.2.2",
     "react-ios-switch": "^0.1.12",
+    "react-loadable": "^5.5.0",
     "react-modal": "^2.2.2",
     "react-onclickoutside": "^6.7.0",
     "react-places-autocomplete": "^5.4.3",
@@ -48,6 +49,7 @@
   "scripts": {
     "start": "PORT=3001 react-scripts start",
     "build": "npm run share && react-scripts build",
+    "postbuild": "node check-service-worker.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "share": "rimraf src/App/shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg}\" src/App/shared",
