--- a/packages/cms-web/package.json
+++ b/packages/cms-web/package.json
@@ -3,24 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "lodash": "^4.17.4",
+    "antd": "^3.11.2",
     "history": "^4.7.2",
+    "lodash": "^4.17.4",
     "material-ui": "^0.19.1",
     "normalizr": "^3.2.4",
     "react": "^16.6.3",
+    "react-cookie": "^2.1.1",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1",
+    "react-flexbox-grid": "^1.1.3",
+    "react-onclickoutside": "^6.7.0",
     "react-redux": "^5.0.2",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
-    "react-cookie": "^2.1.1",
-    "react-flexbox-grid": "^1.1.3",
+    "react-scripts": "2.1.1",
+    "react-table": "^6.8.6",
     "redux-form": "^6.5.0",
     "redux-logger": "^2.8.2",
     "redux-persist": "^4.1.0",
     "redux-saga": "^0.14.3",
     "reduxsauce": "^0.4.1",
-    "react-onclickoutside": "^6.7.0",
     "seamless-immutable": "^7.1.2",
     "styled-components": "^2.1.1"
   },
