--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
     "draft-js": "^0.10.5",
     "draft-js-plugins-editor": "^2.1.1",
     "draft-js-side-toolbar-plugin": "^2.0.4",
+    "formatcoords": "^1.1.3",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.1",
