--- a/packages/express-api/.npmrc
+++ b/packages/express-api/.npmrc
@@ -1,4 +1,3 @@
-registry = "https://npm.abeck.io"
-always-auth = true
-//npm.abeck.io/:_authToken="${NPM_TOKEN}"
-
+registry=https://npm.abeck.io/
+//npm.abeck.io/:_authToken="W0nZdh1Eqh8nxq7l9fSuyYTd3CtpTxkc/14ZmSS0PjY="
+always-auth=true
