--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -8,6 +8,7 @@
     "build": "babel src -d dist",
     "clean": "rimraf dist",
     "start": "node dist/index.js",
+    "run-ebs": "yarn && ./node_modules/.bin/babel src -d dist && node dist/index.js",
     "dev": "nodemon --watch node_modules/@hero --watch src",
     "deploy": "./ops/deploy.sh",
     "tail-logs": "./ops/tail_logs.sh"
@@ -22,7 +23,7 @@
     "apn": "^2.1.4",
     "aws-sdk": "^2.40.0",
     "babel-polyfill": "^6.23.0",
-    "bcrypt": "^1.0.2",
+    "bcrypt": "^2.0.1",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "cloudinary": "^1.9.0",
@@ -41,7 +42,6 @@
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
-    "sharp": "^0.17.3",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
