--- a/packages/express-api/Dockerfile
+++ b/packages/express-api/Dockerfile
@@ -1,14 +1,15 @@
-FROM rehashstudio2017/ht-api-base
-ARG NPM_TOKEN
+#FROM rehashstudio2017/ht-api-base
+FROM node:7.7.2
+#ARG NPM_TOKEN
 RUN mkdir /app
 WORKDIR /app
 
 RUN curl -o- -L https://yarnpkg.com/install.sh | bash
 
 COPY . /app
-RUN rm -f /app/.env
+#RUN rm -f /app/.env
 RUN $HOME/.yarn/bin/yarn install
-RUN rm -f /app/.npmrc
+#RUN rm -f /app/.npmrc
 RUN npm run build
 
 EXPOSE 3000
