--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "babel src -d dist",
     "clean": "rimraf dist",
-    "start": "node dist/index.js",
+    "start": "node -r dotenv/config dist/index.js",
     "run-ebs": "yarn && ./node_modules/.bin/babel src -d dist && node dist/index.js",
     "dev": "nodemon --watch node_modules/@hero --watch src",
     "deploy": "./ops/deploy.sh",
