--- a/packages/web/.eslintrc
+++ b/packages/web/.eslintrc
@@ -49,6 +49,11 @@
     "operator-linebreak": ["error", "before"],
     "padded-blocks": ["error", { "blocks": "never", "switches": "never", "classes": "never" }],
     "quotes": ["error", "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
+    "react/jsx-closing-bracket-location": [2],
+    "react/jsx-closing-tag-location": [1],
+    "react/jsx-first-prop-new-line": "error",
+    "react/jsx-indent-props": [2, 2],
+    "react/jsx-max-props-per-line": [2, { "maximum" : 1 }],
     "semi": ["error", "never"],
     "semi-spacing": ["error", { "before": false, "after": true }],
     "space-infix-ops": "error",
