--- a/packages/cms/package.json
+++ b/packages/cms/package.json
@@ -2,7 +2,8 @@
   "name": "@hero/cms",
   "private": true,
   "version": "1.0.5",
-  "description": "Content Management System for the Herotraveller App",  "main": "index.js",
+  "description": "Content Management System for the Herotraveller App",
+  "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/babel src -d dist",
     "clean": "rimraf dist",
@@ -33,6 +34,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.6",
     "knox": "^0.9.2",
+    "mailchimp-api-v3": "^1.12.1",
     "moment": "^2.17.1",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
