--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -17,6 +17,9 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^4.1.0",
+    "redux-saga": "^1.0.2",
     "reduxsauce": "^1.0.1",
     "seamless-immutable": "^7.1.4"
   },
