--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -10,7 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "apisauce": "^1.0.2",
     "lodash": "^4.17.11",
+    "normalizr": "^3.3.0",
     "react": "16.8.3",
     "react-native": "0.59.0",
     "react-native-router-flux": "^4.0.6",
