--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apisauce": "^1.0.2",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "normalizr": "^3.3.0",
     "react": "16.8.3",
     "react-native": "0.59.0",
@@ -24,6 +25,7 @@
     "redux-persist": "^4.1.0",
     "redux-saga": "^1.0.2",
     "reduxsauce": "^1.0.1",
+    "rn-fetch-blob": "^0.10.15",
     "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
