--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -71,6 +71,7 @@
     "react-native-keyboard-spacer": "0.4.1",
     "react-native-keyboard-tracking-view": "https://github.com/rehashstudio/react-native-keyboard-tracking-view.git#v5.1.3.2",
     "react-native-maps": "0.20",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-push-notification": "3.0.1",
     "react-native-router-flux": "3.43",
     "react-native-splash-screen": "3.0.0",
