--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-branch')
     implementation project(':react-native-fbsdk')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-push-notification')
