--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
@@ -26,6 +26,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>fb1589340484457361</string>
+				<string>com.herotraveler.herotraveler-beta</string>
 			</array>
 		</dict>
 	</array>
@@ -77,5 +78,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>branch_app_domain</key>
+	<string>herotravelermobile.app.link</string>
+	<key>branch_key</key>
+	<string>key_live_lft20CIVGljfBknhjoHmiedaBFkaCTcg</string>
 </dict>
 </plist>
