--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -16,6 +16,7 @@
     "normalizr": "^3.3.0",
     "react": "16.8.3",
     "react-native": "0.59.0",
+    "react-native-branch": "^3.0.0-beta.3",
     "react-native-fbsdk": "^0.8.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^4.0.6",
