--- a/packages/HeroTravelerMobile/.eslintrc
+++ b/packages/HeroTravelerMobile/.eslintrc
@@ -19,6 +19,7 @@
     "plugin:react/recommended"
   ],
   "rules": {
+    "indent": [2,2],
     "no-console": 1,
     "react/jsx-max-props-per-line": [2, { "maximum" : 1 }],
     "react/jsx-no-bind": 2,
