--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -20,6 +20,7 @@
     "react-native-fbsdk": "^0.8.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^4.0.6",
+    "react-native-splash-screen": "^3.2.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
@@ -43,5 +44,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./App/Fonts"
+    ]
   }
 }
