--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_async-storage')
+    implementation project(':react-native-fast-image')
     implementation project(':react-native-splash-screen')
     implementation project(':react-native-branch')
     implementation project(':react-native-fbsdk')
