--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.2.1",
     "apisauce": "^1.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -17,6 +18,7 @@
     "react": "16.8.3",
     "react-native": "0.59.0",
     "react-native-branch": "^3.0.0-beta.3",
+    "react-native-fast-image": "^5.2.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^4.0.6",
