--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -20,15 +20,17 @@
     "react-native-branch": "^3.0.0-beta.3",
     "react-native-fast-image": "^5.2.0",
     "react-native-fbsdk": "^0.8.0",
+    "react-native-gesture-handler": "^1.1.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "^4.0.6",
     "react-native-splash-screen": "^3.2.0",
+    "react-navigation": "^3.5.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-saga": "^1.0.2",
+    "redux-saga": "^0.16.2",
     "reduxsauce": "^1.0.1",
     "rn-fetch-blob": "^0.10.15",
     "seamless-immutable": "^7.1.4"
