add login and loosely connects basic tabbar containers

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -11,19 +11,29 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.2.1",
+    "@react-native-community/netinfo": "^1.4.0",
+    "algoliasearch": "^3.32.1",
+    "algoliasearch-helper": "^2.26.1",
     "apisauce": "^1.0.2",
+    "keymirror": "^0.1.1",
     "lodash": "^4.17.11",
+    "memoize-one": "^5.0.0",
     "moment": "^2.24.0",
     "normalizr": "^3.3.0",
+    "numeral": "^2.0.6",
     "react": "16.8.3",
+    "react-mixin": "^5.0.0",
     "react-native": "0.59.0",
     "react-native-branch": "^3.0.0-beta.3",
     "react-native-fast-image": "^5.2.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-google-places": "^2.5.2",
+    "react-native-maps": "^0.23.0",
     "react-native-push-notification": "^3.1.2",
-    "react-native-router-flux": "^4.0.6",
+    "react-native-router-flux": "3.43",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.5.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
