--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -25,17 +25,25 @@
     "react-mixin": "^5.0.0",
     "react-native": "0.59.0",
     "react-native-branch": "^3.0.0-beta.3",
+    "react-native-camera": "^2.0.2",
+    "react-native-draftjs-render": "^2.9.0",
     "react-native-fast-image": "^5.2.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-google-places": "^2.5.2",
+    "react-native-image-picker": "^0.28.0",
+    "react-native-keyboard-tracking-view": "^5.5.0",
     "react-native-maps": "^0.23.0",
     "react-native-push-notification": "^3.1.2",
     "react-native-router-flux": "3.43",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-version-number": "^0.3.5",
     "react-navigation": "^3.5.1",
     "react-redux": "^6.0.1",
+    "react-timer-mixin": "^0.13.4",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
