Pick image ux added

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -39,6 +39,8 @@
     "draft-js": "0.10",
     "eslint-plugin-react-native": "^2.3.2",
     "format-json": "^1.0.3",
+    "gl-react": "^2.2.4",
+    "gl-react-native": "^2.57.0",
     "immutable": "3.7.6",
     "keymirror": "0.1.1",
     "lodash": "^4.17.2",
@@ -66,12 +68,12 @@
     "react-native-google-places": "^2.4.2",
     "react-native-hockeyapp": "^0.5.1",
     "react-native-htmlview": "0.12.1",
+    "react-native-image-cropper": "^0.4.5",
     "react-native-image-picker": "^0.26.2",
     "react-native-img-cache": "1.5.3",
     "react-native-keyboard-spacer": "0.4.1",
     "react-native-keyboard-tracking-view": "https://github.com/rehashstudio/react-native-keyboard-tracking-view.git#v5.1.3.2",
     "react-native-maps": "0.20",
-    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-push-notification": "3.0.1",
     "react-native-router-flux": "3.43",
     "react-native-splash-screen": "3.0.0",
