--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -74,6 +74,7 @@
     "react-native-maps": "0.20",
     "react-native-push-notification": "3.0.1",
     "react-native-router-flux": "3.43",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-splash-screen": "3.0.0",
     "react-native-swipeout": "^2.3.3",
     "react-native-vector-icons": "^4.0.0",
