adds react-native-video-processing

--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -15,6 +15,7 @@
     "algoliasearch": "^3.32.1",
     "algoliasearch-helper": "^2.26.1",
     "apisauce": "^1.0.2",
+    "draft-js": "^0.10.5",
     "keymirror": "^0.1.1",
     "lodash": "^4.17.11",
     "memoize-one": "^5.0.0",
@@ -40,6 +41,7 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-vector-icons": "^6.4.2",
     "react-native-version-number": "^0.3.5",
+    "react-native-video-processing": "^1.20.0",
     "react-navigation": "^3.5.1",
     "react-redux": "^6.0.1",
     "react-timer-mixin": "^0.13.4",
