algolia trial for search

--- a/packages/cms/.env.example
+++ b/packages/cms/.env.example
@@ -17,7 +17,9 @@ ASSETS_VIDEOS_FOLDER={folderName}
 SENDGRID_API_KEY="{sendgridKey}"
 SENDGRID_FROM_ADDRESS="{dev's email or production email}"
 
-ALGOLIA_ACCT_KEY='BEEW4KQKOP'
+ALGOLIA_STORY_INDEX='{storyIndex}'
+ALGOLIA_CATEGORY_INDEX='{categoryIndex}'
+ALGOLIA_HASHTAG_INDEX='{hashtagIndex}'
 ALGOLIA_API_KEY='318fa67b79fd7fdd680d68798d666786'
 ALGOLIA_STORY_INDEX='alexey_dev_STORIES'
 ALGOLIA_USER_INDEX='alexey_dev_USERS'
