--- a/packages/cms-web/package.json
+++ b/packages/cms-web/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "algoliasearch": "^3.32.1",
+    "algoliasearch-helper": "^2.27.0",
     "antd": "^3.11.2",
     "dotenv": "^6.2.0",
     "history": "^4.7.2",
