--- a/packages/HeroTravelerMobile/.eslintrc
+++ b/packages/HeroTravelerMobile/.eslintrc
@@ -19,7 +19,7 @@
     "plugin:react/recommended"
   ],
   "rules": {
-    "indent": [2,2],
+    "indent": [2,2, { "SwitchCase": 1 }],
     "no-console": 1,
     "react/jsx-no-bind": 2,
     "react/prop-types": 1,
