--- a/packages/HeroTravelerMobile/package.json
+++ b/packages/HeroTravelerMobile/package.json
@@ -63,7 +63,7 @@
     "react-native-fbsdk": "^0.6.0",
     "react-native-fetch-blob": "^0.10.5",
     "react-native-global-props": "^1.1.1",
-    "react-native-google-places": "^2.4.2",
+    "react-native-google-places": "^3.0.0-beta.11",
     "react-native-hockeyapp": "^0.5.1",
     "react-native-htmlview": "0.12.1",
     "react-native-image-picker": "^0.26.2",
