extra always key added

--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
@@ -78,6 +78,8 @@
 	<string>Turn on location services to view stories nearest to you.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
   <string>Turn on location services to view stories nearest to you.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
+  <string>Turn on location services to view stories nearest to you.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Enable the microphone to record audio for stories</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
