--- a/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
+++ b/packages/HeroTravelerMobile/ios/HeroTravelerMobile/Info.plist
@@ -74,9 +74,11 @@
 	<string>Unused but App Store requires it</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Camera access is used to capture media for your stories.</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Allows $(PRODUCT_NAME) to access location for stories</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Turn on location services to view $(PRODUCT_NAME) stories nearest to you.</string>
+  <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+  <string>Turn on location services to view $(PRODUCT_NAME) stories nearest to you.</string>
+  <key>NSLocationAlwaysUsageDescription</key>
 	<string>Turn on location services to view $(PRODUCT_NAME) stories nearest to you.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Enable the microphone to record audio for stories</string>
