adds react-native-appstore-version-checker

--- a/packages/HeroTravelerMobile/android/app/build.gradle
+++ b/packages/HeroTravelerMobile/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-appstore-version-checker')
     implementation project(':react-native-google-places')
     implementation project(':react-native-camera')
     implementation project(':react-native-image-picker')
