--- a/packages/HeroTravelerMobile/android/settings.gradle
+++ b/packages/HeroTravelerMobile/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'HeroTravelerMobile'
+include ':react-native-appstore-version-checker'
+project(':react-native-appstore-version-checker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-appstore-version-checker/android')
 
 include ':react-native-google-places'
 project(':react-native-google-places').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-google-places/android')
