ups package version numberes

--- a/packages/ht-core/package.json
+++ b/packages/ht-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hero/ht-core",
-  "version": "0.0.94",
+  "version": "0.0.95",
   "description": "HERO Traveler core server functions",
   "main": "dist/index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hero/ht-util": "^0.0.68",
+    "@hero/ht-util": "~0.0.69",
     "algoliasearch": "^3.22.1",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.23.0",
