--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -17,8 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hero/ht-core": "0.0.94",
-    "@hero/ht-util": "^0.0.68",
+    "@hero/ht-core": "0.0.95",
+    "@hero/ht-util": "~0.0.69",
     "algoliasearch": "^3.23.0",
     "apn": "^2.1.4",
     "aws-sdk": "^2.40.0",
