--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,6 +7,7 @@
     "algoliasearch-helper": "^2.23.2",
     "apisauce": "^0.14.1",
     "draft-js": "^0.10.5",
+    "draft-js-divider-plugin": "^0.2.1",
     "draft-js-inline-toolbar-plugin": "^3.0.0",
     "draft-js-plugins-editor": "^2.1.1",
     "draft-js-side-toolbar-plugin": "^2.0.4",
