--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,7 +11,7 @@
     "draft-js-side-toolbar-plugin": "^2.0.4",
     "formatcoords": "^1.1.3",
     "history": "^4.7.2",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "material-ui": "^0.19.1",
     "moment": "^2.18.1",
     "normalizr": "^3.2.4",
@@ -54,7 +54,7 @@
     "postbuild": "node check-service-worker.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "share": "rm -rf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared && rm -rf src/App/Shared/Web && mkdir src/App/Shared/Web && cpx \"../sharedWeb/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared/Web",
+    "share": "rm -rf srwx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared && rm -rf src/App/Shared/Web && mkdir src/App/Shared/Web && cpx \"../sharedWeb/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared/Web",
     "watchShared": "rimraf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared --watch",
     "watchSharedWeb": "rimraf src/App/Shared/Web && mkdir src/App/Shared/Web && cpx \"../sharedWeb/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared/Web --watch",
     "share:watch": "concurrently --kill-others \"npm run watchShared\" \"npm run watchSharedWeb\""
