--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,11 +50,11 @@
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
-    "build": "npm run share && react-scripts build",
+    "build": "react-scripts build",
     "postbuild": "node check-service-worker.js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "share": "rm -rf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared && rm -rf src/App/Shared/Web && mkdir src/App/Shared/Web && cpx \"../sharedWeb/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared/Web",
+    "share": "rm -rf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared && mkdir src/App/Shared/Web && cpx \"../sharedWeb/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared/Web",
     "watchShared": "rimraf src/App/Shared && mkdir src/App/Shared && cpx \"../shared/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared --watch",
     "watchSharedWeb": "rimraf src/App/Shared/Web && mkdir src/App/Shared/Web && cpx \"../sharedWeb/**/*.{ts,tsx,js,jsx,json,ttf,png,svg,jpg,css,ttf}\" src/App/Shared/Web --watch",
     "share:watch": "concurrently --kill-others \"npm run watchShared\" \"npm run watchSharedWeb\""
