--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "nuka-carousel": "^3.0.0",
     "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
+    "query-string": "^6.5.0",
     "react": "^15.6.1",
     "react-cookie": "^2.1.1",
     "react-day-picker": "^7.0.6",
