refactor .env var setup

--- a/packages/express-api/.env.example
+++ b/packages/express-api/.env.example
@@ -1,4 +1,4 @@
-NODE_ENV='development' // development or production
+NODE_ENV="development" // development or production
 MONGODB_URL="mongodb://{adminUsername}:{password}@{instance}.mlab.com:{port}/{db}"
 
 AWS_ACCESS_KEY="{enterAccessKey}"
@@ -17,12 +17,21 @@ ASSETS_VIDEOS_FOLDER={folderName}
 SENDGRID_API_KEY="{sendgridKey}"
 SENDGRID_FROM_ADDRESS="{dev's email or production email}"
 
-ALGOLIA_ACCT_KEY='{acctKey}'
-ALGOLIA_API_KEY='{apiKey}'
-ALGOLIA_USER_INDEX='{userIndex}'
-ALGOLIA_STORY_INDEX='{storyIndex}'
-ALGOLIA_CATEGORY_INDEX='{categoryIndex}'
-ALGOLIA_HASHTAG_INDEX='{hashtagIndex}'
+ALGOLIA_ACCT_KEY="{acctKey}"
+ALGOLIA_API_KEY="{apiKey}"
+ALGOLIA_USER_INDEX="{userIndex}"
+ALGOLIA_STORY_INDEX="{storyIndex}"
+ALGOLIA_CATEGORY_INDEX="{categoryIndex}"
+ALGOLIA_HASHTAG_INDEX="{hashtagIndex}"
 
-GOOGLE_API_KEY='{googleApiKey}'
+GOOGLE_API_KEY="{googleApiKey}"
+
+MAILCHIMP_API_KEY="{key}"
+MAILCHIMP_LIST_ID="{id}"
+
 API_HOST="{ht url or ngrok url for testing}"
+CORS_ORIGIN="{cors origin 1}"
+CORS_ORIGIN2="{cors origin 2}"
+CORS_ORIGIN3="{cors origin 3}"
+CORS_ORIGIN4="{cors origin 4}"
+CORS_ORIGIN5="{cors origin 5}"
