--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,7 +49,7 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "PORT=3001 NODE_ENV=development react-scripts start",
     "build": "react-scripts build",
     "postbuild": "node check-service-worker.js",
     "test": "react-scripts test --env=jsdom",
