--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -26,8 +26,10 @@
     "bcrypt": "^2.0.1",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "busboy": "^0.3.1",
     "cloudinary": "^1.9.0",
     "compose-middleware": "^2.2.0",
+    "connect-busboy": "^0.0.2",
     "cors": "^2.8.4",
     "debug": "^4.1.0",
     "dotenv": "^4.0.0",
@@ -43,6 +45,7 @@
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
+    "tmp": "^0.1.0",
     "uuid": "^3.0.1"
   },
   "devDependencies": {
