--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,12 +6,15 @@
     "algoliasearch": "^3.24.8",
     "algoliasearch-helper": "^2.23.2",
     "apisauce": "^0.14.1",
+    "axios": "^0.19.0",
     "draft-js": "^0.10.5",
     "draft-js-anchor-plugin": "^2.0.2",
     "draft-js-divider-plugin": "^0.2.1",
     "draft-js-inline-toolbar-plugin": "^3.0.0",
     "draft-js-plugins-editor": "^2.1.1",
     "draft-js-side-toolbar-plugin": "^2.0.4",
+    "filepond": "^4.4.9",
+    "filepond-plugin-file-validate-type": "^1.2.4",
     "formatcoords": "^1.1.3",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
@@ -26,6 +29,7 @@
     "react-day-picker": "^7.0.6",
     "react-dom": "^15.6.1",
     "react-dropdown": "^1.6.4",
+    "react-filepond": "^7.0.1",
     "react-flexbox-grid": "^1.1.3",
     "react-google-maps": "next",
     "react-html5video": "^2.5.1",
