Removed Filepond upload plugin and created plugin which use Cloudinary Upload Widget.

--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -4,6 +4,8 @@ REACT_APP_SITE_URL='see dev'
 REACT_APP_FB_APP_ID='see dev'
 REACT_APP_CDN_BASE_URL='your cloudinary url'
 REACT_APP_CLOUD_NAME='your cloudinary cloudName'
+REACT_APP_CLOUD_API_KEY='your cloudinary API key'
+REACT_APP_UPLOAD_PRESET='your cloudinary upload widget preset name'
 REACT_APP_IMAGE_PRESET='your cloudinary image preset name'
 REACT_APP_VIDEO_PRESET='your cloudinary video preset name'
 
