--- a/packages/ht-util/package.json
+++ b/packages/ht-util/package.json
@@ -14,9 +14,7 @@
     "copy-local:core": "cp -r ./{dist,package.json} ../ht-core/node_modules/@hero/ht-util",
     "copy-local:api": "cp -r ./{dist,package.json} ../express-api/node_modules/@hero/ht-util",
     "copy-local:seeder": "cp -r ./{dist,package.json} ../ht-seed-data/node_modules/@hero/ht-util",
-    "copy-local:cms": "cp -r ./{dist,package.json} ../cms/node_modules/@hero/ht-util",
-    "dev": "watch 'npm run build && npm run copy-local:api && npm run copy-local:core' src",
-    "dev:cms": "watch 'npm run build && npm run copy-local:cms && npm run copy-local:core' src"
+    "dev": "watch 'npm run build && npm run copy-local:api && npm run copy-local:core' src"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
