--- a/packages/express-api/package.json
+++ b/packages/express-api/package.json
@@ -35,6 +35,7 @@
     "knox": "^0.9.2",
     "mailchimp-api-v3": "^1.13.0",
     "moment": "^2.17.1",
+    "mongodb": "^3.2.7",
     "morgan": "^1.8.1",
     "multer": "^1.3.0",
     "multer-s3": "^2.5.0",
