--- a/packages/HeroTravelerMobile/ios/Podfile
+++ b/packages/HeroTravelerMobile/ios/Podfile
@@ -54,6 +54,7 @@ target 'HeroTravelerMobile' do
 
   # Pods for NativeFeed dependencies
   pod 'SDWebImage', :git => 'https://github.com/rehashstudio/SDWebImage.git', :commit => '3db441165dd2f9e93a92b042a5e92f1f743014d5'
+  pod 'FLAnimatedImage'
 
 end
 
