--- a/packages/HeroTravelerMobile/ios/Podfile
+++ b/packages/HeroTravelerMobile/ios/Podfile
@@ -61,16 +61,16 @@ post_install do |installer|
   installer.pods_project.targets.each do |target|
     targets_to_ignore = %w(React yoga)
 
-    # if targets_to_ignore.include? target.name
-    #   target.remove_from_project
-    # end
+    if targets_to_ignore.include? target.name
+      target.remove_from_project
+    end
     if target.name == 'react-native-google-maps'
       target.build_configurations.each do |config|
         config.build_settings['CLANG_ENABLE_MODULES'] = 'No'
       end
     end
-    # if target.name == "React"
-    #   target.remove_from_project
-    # end
+    if target.name == "React"
+      target.remove_from_project
+    end
   end
 end
